--- a/faq.html
+++ b/faq.html
@@ -46,12 +46,12 @@
         <div class="container">
           <div class="row">
             <div class="span6">
-              <p class="topcontact"><i class="icon-phone"></i> +62 088 999 123</p>
+              <p class="topcontact"><i class="icon-phone"></i>+84 978 738 538</p>
             </div>
             <div class="span6">
 
               <ul class="social-network">
-                <li><a href="#" data-placement="bottom" title="Facebook"><i class="icon-facebook icon-white"></i></a></li>
+                <li><a href="https://www.facebook.com/CongtyPCCCPhuThuongPhat/" data-placement="bottom" title="Facebook"><i class="icon-facebook icon-white"></i></a></li>
                 <li><a href="#" data-placement="bottom" title="Twitter"><i class="icon-twitter icon-white"></i></a></li>
                 <li><a href="#" data-placement="bottom" title="Linkedin"><i class="icon-linkedin icon-white"></i></a></li>
                 <li><a href="#" data-placement="bottom" title="Pinterest"><i class="icon-pinterest  icon-white"></i></a></li>
@@ -65,30 +65,29 @@
       </div>
       <div class="container">
 
-
         <div class="row nomargin">
           <div class="span4">
             <div class="logo">
-              <a href="index.html"><img src="img/logo.png" alt="" /></a>
+              <a href="index.html"><img src="img/logoPhuthuongphat.png" alt="" style="width: 65%"/></a>
             </div>
           </div>
-          <div class="span8">
+          <div class="span8" style="padding-top: 2%">
             <div class="navbar navbar-static-top">
               <div class="navigation">
                 <nav>
                   <ul class="nav topnav">
-                    <li class="dropdown">
-                      <a href="index.html"><i class="icon-home"></i> Home <i class="icon-angle-down"></i></a>
-                      <ul class="dropdown-menu">
+                    <li class="dropdown active">
+                      <a href="index.html"><i class="icon-home"></i> Trang chủ <i class="icon-angle-down"></i></a>
+                      <!-- <ul class="dropdown-menu">
                         <li><a href="index-alt2.html">Homepage 2</a></li>
                         <li><a href="index-alt3.html">Homepage 3</a></li>
                         <li><a href="index-alt4.html">Parallax slider</a></li>
                         <li><a href="index-landingpage.html">Landing page</a></li>
-                      </ul>
+                      </ul> -->
                     </li>
                     <li class="dropdown">
-                      <a href="#">Features <i class="icon-angle-down"></i></a>
-                      <ul class="dropdown-menu">
+                      <a href="#"> Dịch vụ PCCC <i class="icon-angle-down"></i></a>
+                      <!-- <ul class="dropdown-menu">
                         <li><a href="typography.html">Typography</a></li>
                         <li><a href="components.html">Components</a></li>
                         <li><a href="icons.html">Icons</a></li>
@@ -99,40 +98,40 @@
                             <li><a href="index.html">Sub menu</a></li>
                           </ul>
                         </li>
-                      </ul>
+                      </ul> -->
                     </li>
-                    <li class="dropdown active">
-                      <a href="#">Pages <i class="icon-angle-down"></i></a>
+                    <li class="dropdown">
+                      <a href="#">Giới thiệu <i class="icon-angle-down"></i></a>
                       <ul class="dropdown-menu">
-                        <li><a href="about.html">About us</a></li>
-                        <li><a href="faq.html">FAQ</a></li>
-                        <li><a href="team.html">Team</a></li>
+                        <li><a href="about.html">Về chúng tôi</a></li>
+                        <li><a href="faq.html">Hồ sơ năng lực</a></li>
+                        <!-- <li><a href="team.html">Team</a></li>
                         <li><a href="services.html">Services</a></li>
                         <li><a href="pricingbox.html">Pricing boxes</a></li>
-                        <li><a href="404.html">404</a></li>
+                        <li><a href="404.html">404</a></li> -->
                       </ul>
                     </li>
                     <li class="dropdown">
-                      <a href="#">Portfolio <i class="icon-angle-down"></i></a>
-                      <ul class="dropdown-menu">
+                      <a href="#"> Khách hàng <i class="icon-angle-down"></i></a>
+                      <!-- <ul class="dropdown-menu">
                         <li><a href="portfolio-2cols.html">Portfolio 2 columns</a></li>
                         <li><a href="portfolio-3cols.html">Portfolio 3 columns</a></li>
                         <li><a href="portfolio-4cols.html">Portfolio 4 columns</a></li>
                         <li><a href="portfolio-detail.html">Portfolio detail</a></li>
-                      </ul>
+                      </ul> -->
                     </li>
                     <li class="dropdown">
-                      <a href="#">Blog <i class="icon-angle-down"></i></a>
-                      <ul class="dropdown-menu">
+                      <a href="#"> Tin tức <i class="icon-angle-down"></i></a>
+                      <!-- <ul class="dropdown-menu">
                         <li><a href="blog-left-sidebar.html">Blog left sidebar</a></li>
                         <li><a href="blog-right-sidebar.html">Blog right sidebar</a></li>
                         <li><a href="blog-fullwidth.html">Blog fullwidth</a></li>
                         <li><a href="post-left-sidebar.html">Post left sidebar</a></li>
                         <li><a href="post-right-sidebar.html">Post right sidebar</a></li>
-                      </ul>
+                      </ul> -->
                     </li>
                     <li>
-                      <a href="contact.html">Contact </a>
+                      <a href="contact.html"> Liên hệ </a>
                     </li>
                   </ul>
                 </nav>
@@ -155,7 +154,7 @@
                 <li><a href="#">Pages</a> <i class="icon-angle-right"></i></li>
                 <li class="active">Faq</li>
               </ul>
-              <h2>Frequently Asked Questions</h2>
+              <h2>Hồ sơ năng lực</h2>
             </div>
           </div>
         </div>
