--- a/faq.html
+++ b/faq.html
@@ -46,29 +46,35 @@
         <div class="container">
           <div class="row">
             <div class="span6">
-              <p class="topcontact"><i class="icon-phone"></i>+84 978 738 538</p>
+              <p class="topcontact" style="font-size: 20px;padding-top:5px"><i class="icon-phone"></i> +84 978 738 538
+              </p>
             </div>
             <div class="span6">
 
-              <ul class="social-network">
-                <li><a href="https://www.facebook.com/CongtyPCCCPhuThuongPhat/" data-placement="bottom" title="Facebook"><i class="icon-facebook icon-white"></i></a></li>
+              <ul class="social-network" style="font-size: 20px;">
+                <li><a href="https://www.facebook.com/CongtyPCCCPhuThuongPhat/" data-placement="bottom"
+                    title="Facebook"><i class="icon-facebook icon-white"></i></a></li>
                 <li><a href="#" data-placement="bottom" title="Twitter"><i class="icon-twitter icon-white"></i></a></li>
-                <li><a href="#" data-placement="bottom" title="Linkedin"><i class="icon-linkedin icon-white"></i></a></li>
-                <li><a href="#" data-placement="bottom" title="Pinterest"><i class="icon-pinterest  icon-white"></i></a></li>
-                <li><a href="#" data-placement="bottom" title="Google +"><i class="icon-google-plus icon-white"></i></a></li>
-                <li><a href="#" data-placement="bottom" title="Dribbble"><i class="icon-dribbble icon-white"></i></a></li>
+                <li><a href="#" data-placement="bottom" title="Linkedin"><i class="icon-linkedin icon-white"></i></a>
+                </li>
+                <li><a href="#" data-placement="bottom" title="Pinterest"><i class="icon-pinterest  icon-white"></i></a>
+                </li>
+                <li><a href="#" data-placement="bottom" title="Google +"><i class="icon-google-plus icon-white"></i></a>
+                </li>
+                <li><a href="#" data-placement="bottom" title="Dribbble"><i class="icon-dribbble icon-white"></i></a>
+                </li>
               </ul>
 
             </div>
           </div>
         </div>
       </div>
+      
       <div class="container">
-
         <div class="row nomargin">
           <div class="span4">
             <div class="logo">
-              <a href="index.html"><img src="img/logoPhuthuongphat.png" alt="" style="width: 65%"/></a>
+              <a href="index.html"><img src="img/logoPhuthuongphat.png" alt="" style="width: 65%" /></a>
             </div>
           </div>
           <div class="span8" style="padding-top: 2%">
@@ -164,9 +170,11 @@
     <section id="content">
       <div class="container">
         <div class="row">
-
-          <div class="span12">
-            <iframe src="https://drive.google.com/file/d/1Rw0n1Mhs7FyzPMHwDhQejXvAhd2v6R45/view"></iframe>
+          <div class="span2"></div>
+          <div class="span8">
+            <iframe src="https://drive.google.com/file/d/1ap7PlQ1lMzZ5eHlPCSeT7cfwk7q1HybV/view" width="100%"
+              height="800px" scrolling="auto">
+            </iframe>
           </div>
 
         </div>
@@ -195,10 +203,9 @@
             <div class="widget">
               <h5 class="widgetheading">Get in touch</h5>
               <address>
-							<strong>Eterna company Inc.</strong><br>
-							Somestreet 200 VW, Suite Village A.001<br>
-							Jakarta 13426 Indonesia
-						</address>
+                <strong>PCCC Phú Thượng Phát Company Inc.</strong><br>
+                Di An, Binh Duong, VietNam
+              </address>
               <p>
                 <i class="icon-phone"></i> (123) 456-7890 - (123) 555-7891 <br>
                 <i class="icon-envelope-alt"></i> email@domainname.com
@@ -226,7 +233,7 @@
           <div class="row">
             <div class="span6">
               <div class="copyright">
-                <p><span>&copy; Eterna company. All right reserved</span></p>
+                <p>Copyright <span>&copy; 2019 PCCC PHÚ THƯỢNG PHÁT. All right reserved</span></p>
               </div>
 
             </div>
@@ -234,12 +241,12 @@
             <div class="span6">
               <div class="credits">
                 <!--
-                  All the links in the footer should remain intact.
-                  You can delete the links only if you purchased the pro version.
-                  Licensing information: https://bootstrapmade.com/license/
-                  Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Eterna
-                -->
-                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+                    All the links in the footer should remain intact.
+                    You can delete the links only if you purchased the pro version.
+                    Licensing information: https://bootstrapmade.com/license/
+                    Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Eterna
+                  -->
+                Designed by BootstrapMade
               </div>
             </div>
           </div>
