--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
       <div class="container">
         <div class="row">
           <div class="span6">
-            <p class="topcontact"><i class="icon-phone"></i>+84 978 738 538</p>
+            <p class="topcontact" style="font-size: 20px;padding-top:5px"><i class="icon-phone"></i> +84 978 738 538 </p>
           </div>
           <div class="span6">
 
-            <ul class="social-network">
+            <ul class="social-network" style="font-size: 20px;">
               <li><a href="https://www.facebook.com/CongtyPCCCPhuThuongPhat/" data-placement="bottom" title="Facebook"><i class="icon-facebook icon-white"></i></a></li>
               <li><a href="#" data-placement="bottom" title="Twitter"><i class="icon-twitter icon-white"></i></a></li>
               <li><a href="#" data-placement="bottom" title="Linkedin"><i class="icon-linkedin icon-white"></i></a></li>
@@ -63,8 +63,8 @@
         </div>
       </div>
     </div>
-    <div class="container">
 
+    <div class="container">
       <div class="row nomargin">
         <div class="span4">
           <div class="logo">
