--- a/contact.html
+++ b/contact.html
@@ -217,8 +217,8 @@
 
                 <ul class="contact-info">
                   <li><label>Địa chỉ :</label> Dĩ An, Bình Dương </li>
-                  <li><label>Điện thoại :</label>+62 123 456 78 / +62 123 456 79</li>
-                  <li><label>Mã số thuế : </label>+62 123 456 10 / +62 123 456 11</li>
+                  <li><label>Điện thoại :</label>0978 738 538 / 0987 474 114</li>
+                  <li><label>Mã số thuế :</label>3 7 0 2 6 3 5 0 4 5</li>
                   <li><label>Email : </label> info@yourdomain.com</li>
                 </ul>
 
@@ -234,9 +234,9 @@
         <div class="row">
           <div class="span4">
             <div class="widget">
-              <h5 class="widgetheading">Browse pages</h5>
+              <h5 class="widgetheading">Support </h5>
               <ul class="link-list">
-                <li><a href="#">Our company</a></li>
+                <li><a href="about.html">Our company</a></li>
                 <li><a href="#">Terms and conditions</a></li>
                 <li><a href="#">Privacy policy</a></li>
                 <li><a href="#">Press release</a></li>
@@ -248,7 +248,7 @@
           </div>
           <div class="span4">
             <div class="widget">
-              <h5 class="widgetheading">Get in touch</h5>
+              <h5 class="widgetheading">Information</h5>
               <address>
                 <strong>PCCC Phú Thượng Phát Company Inc.</strong><br>
                 Di An, Binh Duong, VietNam
