--- a/about.html
+++ b/about.html
@@ -279,9 +279,9 @@
         <div class="row">
           <div class="span4">
             <div class="widget">
-              <h5 class="widgetheading">Browse pages</h5>
+              <h5 class="widgetheading">Support </h5>
               <ul class="link-list">
-                <li><a href="#">Our company</a></li>
+                <li><a href="about.html">Our company</a></li>
                 <li><a href="#">Terms and conditions</a></li>
                 <li><a href="#">Privacy policy</a></li>
                 <li><a href="#">Press release</a></li>
@@ -293,7 +293,7 @@
           </div>
           <div class="span4">
             <div class="widget">
-              <h5 class="widgetheading">Get in touch</h5>
+              <h5 class="widgetheading">Information</h5>
               <address>
                 <strong>PCCC Phú Thượng Phát Company Inc.</strong><br>
                 Di An, Binh Duong, VietNam
