Update icon in Trang chu

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                             <div class="span4">
                                 <div class="box flyLeft">
                                     <div class="icon">
-                                        <i class="ico icon-circled icon-bgdark icon-star active icon-3x"></i>
+                                        <i class="ico icon-circled icon-bgdark icon-building active icon-3x"></i>
                                     </div>
                                     <div class="text">
                                         <h4>Giới thiệu chung</h4>
@@ -250,7 +250,7 @@
                             <div class="span4">
                                 <div class="box flyIn">
                                     <div class="icon">
-                                        <i class="ico icon-circled icon-bgdark icon-dropbox active icon-3x"></i>
+                                        <i class="ico icon-circled icon-bgdark icon-eye-open active icon-3x"></i>
                                     </div>
                                     <div class="text">
                                         <h4>Tầm nhìn</h4>
@@ -265,7 +265,7 @@
                             <div class="span4">
                                 <div class="box flyRight">
                                     <div class="icon">
-                                        <i class="ico icon-circled icon-bgdark icon-laptop active icon-3x"></i>
+                                        <i class="ico icon-circled icon-bgdark icon-star active icon-3x"></i>
                                     </div>
                                     <div class="text">
                                         <h4>Sứ mệnh</h4>
