--- a/index.html
+++ b/index.html
@@ -86,57 +86,49 @@
                                         <li class="dropdown active">
                                             <a href="index.html"><i class="icon-home"></i> Trang chủ <i
                                                     class="icon-angle-down"></i></a>
-                                            <!-- <ul class="dropdown-menu">
-                      <li><a href="index-alt2.html">Homepage 2</a></li>
-                      <li><a href="index-alt3.html">Homepage 3</a></li>
-                      <li><a href="index-alt4.html">Parallax slider</a></li>
-                      <li><a href="index-landingpage.html">Landing page</a></li>
-                    </ul> -->
                                         </li>
                                         <li class="dropdown">
-                                            <a href="#"> Dịch vụ PCCC <i class="icon-angle-down"></i></a>
+                                            <a href="#"> Dịch vụ PCCC
+                                                <i class="icon-angle-down"></i></a>
                                             <!-- <ul class="dropdown-menu">
-                      <li><a href="typography.html">Typography</a></li>
-                      <li><a href="components.html">Components</a></li>
-                      <li><a href="icons.html">Icons</a></li>
-                      <li><a href="icon-variations.html">Icon variations</a></li>
-                      <li class="dropdown"><a href="#">3rd menus<i class="icon-angle-right"></i></a>
-                        <ul class="dropdown-menu sub-menu-level1">
-                          <li><a href="index.html">Sub menu</a></li>
-                          <li><a href="index.html">Sub menu</a></li>
-                        </ul>
-                      </li>
-                    </ul> -->
+                                                              <li><a href="typography.html">Typography</a></li>
+                                                              <li><a href="components.html">Components</a></li>
+                                                              <li><a href="icons.html">Icons</a></li>
+                                                              <li><a href="icon-variations.html">Icon variations</a></li>
+                                                              <li class="dropdown"><a href="#">3rd menus<i class="icon-angle-right"></i></a>
+                                                                <ul class="dropdown-menu sub-menu-level1">
+                                                                  <li><a href="index.html">Sub menu</a></li>
+                                                                  <li><a href="index.html">Sub menu</a></li>
+                                                                </ul>
+                                                              </li>
+                                                            </ul> -->
                                         </li>
                                         <li class="dropdown">
-                                            <a href="#">Giới thiệu <i class="icon-angle-down"></i></a>
+                                            <a href="about.html"> Giới thiệu <i class="icon-angle-down"></i></a>
                                             <ul class="dropdown-menu">
                                                 <li><a href="about.html">Về chúng tôi</a></li>
                                                 <li><a href="faq.html">Hồ sơ năng lực</a></li>
-                                                <!-- <li><a href="team.html">Team</a></li>
-                      <li><a href="services.html">Services</a></li>
-                      <li><a href="pricingbox.html">Pricing boxes</a></li>
-                      <li><a href="404.html">404</a></li> -->
                                             </ul>
+                                        </li>
+                                        <li class="dropdown">
+                                            <a href="#"> Công trình <i class="icon-angle-down"></i></a>
+                                            <!-- <ul class="dropdown-menu">
+                                            <li><a href="portfolio-2cols.html">Công trình</a></li>
+                                            <li><a href="portfolio-3cols.html">Khách hàng</a></li>
+                                            <li><a href="portfolio-4cols.html">Portfolio 4 columns</a></li>
+                                            <li><a href="portfolio-detail.html">Portfolio detail</a></li>
+                                        </ul> -->
+
                                         </li>
                                         <li class="dropdown">
                                             <a href="#"> Khách hàng <i class="icon-angle-down"></i></a>
                                             <!-- <ul class="dropdown-menu">
-                      <li><a href="portfolio-2cols.html">Portfolio 2 columns</a></li>
-                      <li><a href="portfolio-3cols.html">Portfolio 3 columns</a></li>
-                      <li><a href="portfolio-4cols.html">Portfolio 4 columns</a></li>
-                      <li><a href="portfolio-detail.html">Portfolio detail</a></li>
-                    </ul> -->
-                                        </li>
-                                        <li class="dropdown">
-                                            <a href="#"> Tin tức <i class="icon-angle-down"></i></a>
-                                            <!-- <ul class="dropdown-menu">
-                      <li><a href="blog-left-sidebar.html">Blog left sidebar</a></li>
-                      <li><a href="blog-right-sidebar.html">Blog right sidebar</a></li>
-                      <li><a href="blog-fullwidth.html">Blog fullwidth</a></li>
-                      <li><a href="post-left-sidebar.html">Post left sidebar</a></li>
-                      <li><a href="post-right-sidebar.html">Post right sidebar</a></li>
-                    </ul> -->
+                                                <li><a href="blog-left-sidebar.html">Blog left sidebar</a></li>
+                                                <li><a href="blog-right-sidebar.html">Blog right sidebar</a></li>
+                                                <li><a href="blog-fullwidth.html">Blog fullwidth</a></li>
+                                                <li><a href="post-left-sidebar.html">Post left sidebar</a></li>
+                                                <li><a href="post-right-sidebar.html">Post right sidebar</a></li>
+                                            </ul> -->
                                         </li>
                                         <li>
                                             <a href="contact.html"> Liên hệ </a>
@@ -287,121 +279,6 @@
                         <div class="solidline"></div>
                     </div>
                 </div>
-                <!-- 
-      <div class="row">
-        <div class="span12">
-          <div class="row">
-            <div class="span12">
-              <div class="aligncenter">
-                <h3>Our <strong>Pricing</strong></h3>
-                <p>Lorem ipsum dolor sit amet, labores dolorum scriptorem eum an, te quodsi sanctus neglegentur.
-                </p>
-              </div>
-            </div>
-          </div>
-
-
-          <div class="row">
-
-            <div class="span3">
-              <div class="pricing-box-wrap animated-fast flyIn">
-                <div class="pricing-heading">
-                  <h3>Very <strong>Basic</strong></h3>
-                </div>
-                <div class="pricing-terms">
-                  <h6>&#36;15.00 / Month</h6>
-                </div>
-                <div class="pricing-content">
-                  <ul>
-                    <li><i class="icon-ok"></i> 100 applications</li>
-                    <li><i class="icon-ok"></i> 24x7 support available</li>
-                    <li><i class="icon-ok"></i> No hidden fees</li>
-                    <li><i class="icon-ok"></i> Free 30-days trial</li>
-                    <li><i class="icon-ok"></i> Stop anytime easily</li>
-                  </ul>
-                </div>
-                <div class="pricing-action">
-                  <a href="#" class="btn btn-medium btn-theme"><i class="icon-chevron-down"></i> Sign Up</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="span3">
-              <div class="pricing-box-wrap animated-fast flyIn">
-                <div class="pricing-heading">
-                  <h3>Simple <strong>Choice</strong></h3>
-                </div>
-                <div class="pricing-terms">
-                  <h6>&#36;20.00 / Month</h6>
-                </div>
-                <div class="pricing-content">
-                  <ul>
-                    <li><i class="icon-ok"></i> 100 applications</li>
-                    <li><i class="icon-ok"></i> 24x7 support available</li>
-                    <li><i class="icon-ok"></i> No hidden fees</li>
-                    <li><i class="icon-ok"></i> Free 30-days trial</li>
-                    <li><i class="icon-ok"></i> Stop anytime easily</li>
-                  </ul>
-                </div>
-                <div class="pricing-action">
-                  <a href="#" class="btn btn-medium btn-theme"><i class="icon-chevron-down"></i> Sign Up</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="span3">
-              <div class="pricing-box-wrap special animated-slow flyIn">
-                <div class="pricing-heading">
-                  <h3>Special <strong>Choice</strong></h3>
-                </div>
-                <div class="pricing-terms">
-                  <h6>&#36;15.00 / Month</h6>
-                </div>
-                <div class="pricing-content">
-                  <ul>
-                    <li><i class="icon-ok"></i> 100 applications</li>
-                    <li><i class="icon-ok"></i> 24x7 support available</li>
-                    <li><i class="icon-ok"></i> No hidden fees</li>
-                    <li><i class="icon-ok"></i> Free 30-days trial</li>
-                    <li><i class="icon-ok"></i> Stop anytime easily</li>
-                  </ul>
-                </div>
-                <div class="pricing-action">
-                  <a href="#" class="btn btn-medium btn-theme"><i class="icon-chevron-down"></i> Sign Up</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="span3">
-              <div class="pricing-box-wrap animated flyIn">
-                <div class="pricing-heading">
-                  <h3>Just <strong>Happy</strong></h3>
-                </div>
-                <div class="pricing-terms">
-                  <h6>&#36;15.00 / Month</h6>
-                </div>
-                <div class="pricing-content">
-                  <ul>
-                    <li><i class="icon-ok"></i> 100 applications</li>
-                    <li><i class="icon-ok"></i> 24x7 support available</li>
-                    <li><i class="icon-ok"></i> No hidden fees</li>
-                    <li><i class="icon-ok"></i> Free 30-days trial</li>
-                    <li><i class="icon-ok"></i> Stop anytime easily</li>
-                  </ul>
-                </div>
-                <div class="pricing-action">
-                  <a href="#" class="btn btn-medium btn-theme"><i class="icon-chevron-down"></i> Sign Up</a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </div>
-
-
-      </div> -->
-
-
 
                 <div class="row">
                     <div class="span12 aligncenter">
