--- a/faq.html
+++ b/faq.html
@@ -106,35 +106,32 @@
                         </li>
                       </ul> -->
                     </li>
-                    <li class="dropdown active">
-                      <a href="#">Giới thiệu <i class="icon-angle-down"></i></a>
+                    <li class="dropdown">
+                      <a href="about.html"> Giới thiệu <i class="icon-angle-down"></i></a>
                       <ul class="dropdown-menu">
                         <li><a href="about.html">Về chúng tôi</a></li>
                         <li><a href="faq.html">Hồ sơ năng lực</a></li>
-                        <!-- <li><a href="team.html">Team</a></li>
-                        <li><a href="services.html">Services</a></li>
-                        <li><a href="pricingbox.html">Pricing boxes</a></li>
-                        <li><a href="404.html">404</a></li> -->
                       </ul>
+                    </li>
+                    <li class="dropdown">
+                      <a href="#"> Công trình <i class="icon-angle-down"></i></a>
+                      <!-- <ul class="dropdown-menu">
+                        <li><a href="portfolio-2cols.html">Công trình</a></li>
+                        <li><a href="portfolio-3cols.html">Khách hàng</a></li>
+                        <li><a href="portfolio-4cols.html">Portfolio 4 columns</a></li>
+                        <li><a href="portfolio-detail.html">Portfolio detail</a></li>
+                    </ul> -->
+
                     </li>
                     <li class="dropdown">
                       <a href="#"> Khách hàng <i class="icon-angle-down"></i></a>
                       <!-- <ul class="dropdown-menu">
-                        <li><a href="portfolio-2cols.html">Portfolio 2 columns</a></li>
-                        <li><a href="portfolio-3cols.html">Portfolio 3 columns</a></li>
-                        <li><a href="portfolio-4cols.html">Portfolio 4 columns</a></li>
-                        <li><a href="portfolio-detail.html">Portfolio detail</a></li>
-                      </ul> -->
-                    </li>
-                    <li class="dropdown">
-                      <a href="#"> Tin tức <i class="icon-angle-down"></i></a>
-                      <!-- <ul class="dropdown-menu">
-                        <li><a href="blog-left-sidebar.html">Blog left sidebar</a></li>
-                        <li><a href="blog-right-sidebar.html">Blog right sidebar</a></li>
-                        <li><a href="blog-fullwidth.html">Blog fullwidth</a></li>
-                        <li><a href="post-left-sidebar.html">Post left sidebar</a></li>
-                        <li><a href="post-right-sidebar.html">Post right sidebar</a></li>
-                      </ul> -->
+                            <li><a href="blog-left-sidebar.html">Blog left sidebar</a></li>
+                            <li><a href="blog-right-sidebar.html">Blog right sidebar</a></li>
+                            <li><a href="blog-fullwidth.html">Blog fullwidth</a></li>
+                            <li><a href="post-left-sidebar.html">Post left sidebar</a></li>
+                            <li><a href="post-right-sidebar.html">Post right sidebar</a></li>
+                        </ul> -->
                     </li>
                     <li>
                       <a href="contact.html"> Liên hệ </a>
