Update content and main color

--- a/contact.html
+++ b/contact.html
@@ -199,7 +199,7 @@
                     placeholder="Message"></textarea>
                   <div class="validation"></div>
                   <div class="text-center">
-                    <button class="btn btn-theme btn-medium margintop10" type="submit">Send a message</button>
+                    <button class="btn btn-theme btn-medium margintop10" type="submit" click="sendMessage()">Send a message</button>
                   </div>
                 </div>
               </div>
@@ -325,6 +325,12 @@
 
   <!-- Template Custom JavaScript File -->
   <script src="js/custom.js"></script>
+
+  <script>
+    function sendMessage() {
+      alert("ănlol");
+    }
+  </script>
 
 
 </body>
