--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                                             <ul class="dropdown-menu">
                                                 <li><a href="about.html">Về chúng tôi</a></li>
                                                 <li><a href="faq.html">Hồ sơ năng lực</a></li>
+                                                <li><a href="#">Tầm nhìn và sứ mệnh</a></li>
                                             </ul>
                                         </li>
                                         <li class="dropdown">
@@ -231,10 +232,9 @@
                                     <div class="text">
                                         <h4>Giới thiệu chung</h4>
                                         <p>
-                                            Lorem ipsum dolor sit amet, has ei ipsum scaevola deseruisse am sea
-                                            facilisis.
+                                                Công Ty TNHH Thương Mại và Kỹ Thuật PCCC <span><strong>Phú Thượng Phát</strong></span> được thành lập ngày 15/1/2018.
                                         </p>
-                                        <a href="#">Learn More</a>
+                                        <a href="about.html">Learn More</a>
                                     </div>
                                 </div>
                             </div>
@@ -247,9 +247,9 @@
                                     <div class="text">
                                         <h4>Tầm nhìn</h4>
                                         <p>
-                                            Lorem ipsum dolor sit amet, has ei ipsum scaevola deseruisse am sea
-                                            facilisis.
+                                            Đến năm 2025 đạt thương hiệu PCCC toàn quốc.
                                         </p>
+                                        <br>
                                         <a href="#">Learn More</a>
                                     </div>
                                 </div>
@@ -262,9 +262,10 @@
                                     <div class="text">
                                         <h4>Sứ mệnh</h4>
                                         <p>
-                                            Lorem ipsum dolor sit amet, has ei ipsum scaevola deseruisse am sea
-                                            facilisis.
+                                            Đem lại sự an toàn, tin cậy cho khách hàng qua từng công trình.
+                                            
                                         </p>
+                                        <br>
                                         <a href="#">Learn More</a>
                                     </div>
                                 </div>
