--- a/index.html
+++ b/index.html
@@ -184,9 +184,13 @@
                                 <div class="span6">
                                     <h2 class="animated fadeInDown"><strong> Nhanh chóng <span class="colored"> An toàn
                                             </span><span> Tiết kiệm </span> </strong></h2>
-                                    <p class="animated fadeInUp"> Vim porro dicam reprehendunt te, populo quodsi
-                                        dissentiet cum ad. Ne natum deseruisse vis. Iisque deseruisse sententiae mel ne,
-                                        dolores appetere vim ut. Sea no tamquam reprimique.</p>
+                                    <p class="animated fadeInUp" style="font-size: 20px">
+                                        - Tư vấn thiết kế PCCC<br>
+                                        - Cung cấp lắp đặt hệ thống PCCC<br>
+                                        - Bảo trì bảo hàng hệ thống PCCC<br>
+                                        - Cung cấp lắp đặt hệ thống điện công nghiệp<br>
+                                        - Cung cấp lắp đặt hệ thống Camera quan sát báo trộm
+                                    </p>
                                 </div>
 
                             </div>
@@ -200,10 +204,15 @@
                         <div class="container">
                             <div class="row">
                                 <div class="span12 aligncenter">
-                                    <h2 class="animated fadeInDown"><strong><span class="colored">Luôn đồng hành cùng
-                                                bạn trên mọi công trình</strong></h2>
-                                    <p class="animated fadeInUp">Pellentesque habitant morbi tristique senectus et netus
-                                        et malesuada</p>
+                                    <img src="img/slides/camera/slide3/browsers.png" alt=""
+                                        class="animated bounceInDown delay1" />
+                                    <h2 class="animated fadeInDown">
+                                        <strong>
+                                            <span class="colored">Luôn đồng hành cùng
+                                                bạn trên mọi công trình
+                                            </span>
+                                        </strong>
+                                    </h2>
                                 </div>
                             </div>
                         </div>
@@ -232,7 +241,8 @@
                                     <div class="text">
                                         <h4>Giới thiệu chung</h4>
                                         <p>
-                                                Công Ty TNHH Thương Mại và Kỹ Thuật PCCC <span><strong>Phú Thượng Phát</strong></span> được thành lập ngày 15/1/2018.
+                                            Công Ty TNHH Thương Mại và Kỹ Thuật PCCC <span><strong>Phú Thượng
+                                                    Phát</strong></span> được thành lập ngày 15/1/2018.
                                         </p>
                                         <a href="about.html">Learn More</a>
                                     </div>
@@ -263,7 +273,7 @@
                                         <h4>Sứ mệnh</h4>
                                         <p>
                                             Đem lại sự an toàn, tin cậy cho khách hàng qua từng công trình.
-                                            
+
                                         </p>
                                         <br>
                                         <a href="#">Learn More</a>
