Add content Tam nhin va su menh page

--- a/faq.html
+++ b/faq.html
@@ -109,8 +109,9 @@
                     <li class="dropdown">
                       <a href="about.html"> Giới thiệu <i class="icon-angle-down"></i></a>
                       <ul class="dropdown-menu">
-                        <li><a href="about.html">Về chúng tôi</a></li>
-                        <li><a href="faq.html">Hồ sơ năng lực</a></li>
+                          <li><a href="about.html">Về chúng tôi</a></li>
+                          <li><a href="faq.html">Hồ sơ năng lực</a></li>
+                          <li><a href="tamnhinvasumenh.html">Tầm nhìn và sứ mệnh</a></li>
                       </ul>
                     </li>
                     <li class="dropdown">
@@ -179,75 +180,76 @@
     </section>
 
     <footer>
-      <div class="container">
-        <div class="row">
-          <div class="span4">
-            <div class="widget">
-              <h5 class="widgetheading">Support </h5>
-              <ul class="link-list">
-                <li><a href="about.html">Our company</a></li>
-                <li><a href="#">Terms and conditions</a></li>
-                <li><a href="#">Privacy policy</a></li>
-                <li><a href="#">Press release</a></li>
-                <li><a href="#">What we have done</a></li>
-                <li><a href="#">Our support forum</a></li>
-              </ul>
-
-            </div>
-          </div>
-          <div class="span4">
-            <div class="widget">
-              <h5 class="widgetheading">Information</h5>
-              <address>
-                <strong>PCCC Phú Thượng Phát Company Inc.</strong><br>
-                Di An, Binh Duong, VietNam
-              </address>
-              <p>
-                <i class="icon-phone"></i> (123) 456-7890 - (123) 555-7891 <br>
-                <i class="icon-envelope-alt"></i> email@domainname.com
-              </p>
-            </div>
-          </div>
-          <div class="span4">
-            <div class="widget">
-              <h5 class="widgetheading">Subscribe newsletter</h5>
-              <p>
-                Keep updated for new releases and freebies. Enter your e-mail and subscribe to our newsletter.
-              </p>
-              <form class="subscribe">
-                <div class="input-append">
-                  <input class="span2" id="appendedInputButton" type="text">
-                  <button class="btn btn-theme" type="submit">Subscribe</button>
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div id="sub-footer">
         <div class="container">
-          <div class="row">
-            <div class="span6">
-              <div class="copyright">
-                <p>Copyright <span>&copy; 2019 PCCC PHÚ THƯỢNG PHÁT. All right reserved</span></p>
-              </div>
+            <div class="row">
+                <div class="span4">
+                    <div class="widget">
+                        <h5 class="widgetheading">Support </h5>
+                        <ul class="link-list">
+                            <li><a href="about.html">Our company</a></li>
+                            <li><a href="#">Terms and conditions</a></li>
+                            <li><a href="#">Privacy policy</a></li>
+                            <li><a href="#">Press release</a></li>
+                            <li><a href="#">What we have done</a></li>
+                            <li><a href="#">Our support forum</a></li>
+                        </ul>
 
+                    </div>
+                </div>
+                <div class="span4">
+                    <div class="widget">
+                        <h5 class="widgetheading">Information</h5>
+                        <address>
+                            <strong>PCCC Phú Thượng Phát Company Inc.</strong><br>
+                            Di An, Binh Duong, VietNam
+                        </address>
+                        <p>
+                            <i class="icon-phone"></i> 0978 738 538 - 0987 474 114 <br>
+                            <i class="icon-envelope-alt"></i> phuthuongphatpccc@gmail.com
+                        </p>
+                    </div>
+                </div>
+                <div class="span4">
+                    <div class="widget">
+                        <h5 class="widgetheading">Subscribe newsletter</h5>
+                        <p>
+                            Keep updated for new releases and freebies. Enter your e-mail and subscribe to our
+                            newsletter.
+                        </p>
+                        <form class="subscribe">
+                            <div class="input-append">
+                                <input class="span2" id="appendedInputButton" type="text">
+                                <button class="btn btn-theme" type="submit">Subscribe</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
-
-            <div class="span6">
-              <div class="credits">
-                <!--
-                    All the links in the footer should remain intact.
-                    You can delete the links only if you purchased the pro version.
-                    Licensing information: https://bootstrapmade.com/license/
-                    Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Eterna
-                  -->
-                Designed by BootstrapMade
-              </div>
-            </div>
-          </div>
         </div>
-      </div>
+        <div id="sub-footer">
+            <div class="container">
+                <div class="row">
+                    <div class="span6">
+                        <div class="copyright">
+                            <p>Copyright <span>&copy; 2019 PCCC PHÚ THƯỢNG PHÁT. All right reserved</span></p>
+                        </div>
+
+                    </div>
+
+                    <div class="span6">
+                        <div class="credits">
+                            <!--
+            All the links in the footer should remain intact.
+            You can delete the links only if you purchased the pro version.
+            Licensing information: https://bootstrapmade.com/license/
+            Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Eterna
+          -->
+                            Designed by BootstrapMade
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
   </div>
   <a href="#" class="scrollup"><i class="icon-angle-up icon-square icon-bglight icon-2x active"></i></a>
