--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                             <ul class="dropdown-menu">
                                                 <li><a href="about.html">Về chúng tôi</a></li>
                                                 <li><a href="faq.html">Hồ sơ năng lực</a></li>
-                                                <li><a href="#">Tầm nhìn và sứ mệnh</a></li>
+                                                <li><a href="tamnhinvasumenh.html">Tầm nhìn và sứ mệnh</a></li>
                                             </ul>
                                         </li>
                                         <li class="dropdown">
@@ -260,7 +260,7 @@
                                             Đến năm 2025 đạt thương hiệu PCCC toàn quốc.
                                         </p>
                                         <br>
-                                        <a href="#">Learn More</a>
+                                        <a href="tamnhinvasumenh.html">Learn More</a>
                                     </div>
                                 </div>
                             </div>
@@ -276,7 +276,7 @@
 
                                         </p>
                                         <br>
-                                        <a href="#">Learn More</a>
+                                        <a href="tamnhinvasumenh.html">Learn More</a>
                                     </div>
                                 </div>
                             </div>
@@ -471,8 +471,8 @@
                                 Di An, Binh Duong, VietNam
                             </address>
                             <p>
-                                <i class="icon-phone"></i> (123) 456-7890 - (123) 555-7891 <br>
-                                <i class="icon-envelope-alt"></i> email@domainname.com
+                                <i class="icon-phone"></i> 0978 738 538 - 0987 474 114 <br>
+                                <i class="icon-envelope-alt"></i> phuthuongphatpccc@gmail.com
                             </p>
                         </div>
                     </div>
